# Advance-C-

./: .gitignore
EX/ex1/VirusMutationSimulation/: Alpha.cpp  Alpha.h  CMakeLists.txt  Delta.cpp  Delta.h  Omicron.cpp  Omicron.h  RCObject.cpp  RCObject.h  RefCounter.cpp  RefCounter.h  SarsCov2.cpp  SarsCov2.h  Simulator.cpp  Simulator.h  main.cpp  utils.cpp  utils.h
EX/ex2/pNeverland/: Bus.h  CMakeLists.txt  Configuration.cpp  Configuration.h  Graph.cpp  Graph.h  Matrix2D.h  Neverland.cpp  Neverland.h  Rail.cpp  Rail.h  Sprinter.cpp  Sprinter.h  Tram.cpp  Tram.h  User_Interaction.cpp  User_Interaction.h  Validation.cpp  Validation.h  Vehicle.h  exceptions.cpp  exceptions.h  main.cpp
EX/ex2/pNeverland/vehicles/: Bus.cpp  Vehicle.cpp
Labs/Lab5/: main.cpp
Labs/Lab5/solved/: q1.cpp  q2.cpp  q3.cpp  q4.cpp
Labs/lab1/: Q3.cpp  q2.cpp  rational.cpp  rational.h  rational_solved.hpp
Labs/lab2/prograss/: L3_q1.cpp  L3_q2.cpp  L3_q3.cpp  L3_q4.cpp
Labs/lab2/solved/: L3_q1.cpp  L3_q2.cpp  L3_q3.cpp  L3_q4.cpp
Labs/lab4/: aptr_1.cpp  aptr_2.cpp  cyclic_garbidge.cpp  out.txt  ptr_demo.cpp  stam.txt
Labs/lab6/: CMakeLists.txt  Matrix.cpp  RvalueRef_demo.cpp  unique_ptr_demo.cpp
Labs/lab7/: CMakeLists.txt  SqMatrix.cpp  THprintf.cpp  printfVT.cpp
